--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
           <div class="hero-buttons">
             <a href="#projects" class="btn-primary">View Projects</a>
             <!-- Download Resume button now points to the uploaded PDF file (ADITYA VAISHNAV.pdf) -->
-            <a href="ADITYA VAISHNAV.pdf" download class="btn-outline">Download Resume</a>
+            <a href="Aditya4(CV).pdf" download class="btn-outline">Download Resume</a>
           </div>
           <div class="social-icons">
             <a href="https://linkedin.com/in/aditya-vaishnav-234344364" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -631,4 +631,3 @@
   </script>
 </body>
 </html>
-
